[cloud_file]: code was updated
